objects/Remediation__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Remediations</relationshipLabel>
        <relationshipName>Remediations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Remediations</relationshipLabel>
        <relationshipName>Remediations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Resolved no cost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolved with Replacement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolved with Claim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No response to RFI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <label>Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Remediation</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Remediation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Remediations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>